# GRES

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  README.md  consts.h  dataTypes.h  etchingMenu.cpp  etchingMenu.h  face.cpp  face.h  functions.cpp  functions.h  geometry.cpp  geometry.h  main.cpp  maskMenu.cpp  maskMenu.h  maskPreview.cpp  maskPreview.h  render.cpp  render.h  selectAtomMenu.cpp  selectAtomMenu.h  settings.cpp  settings.h
src/: Atoms.cpp  Atoms.h  CMakeLists.txt  Cell.cpp  Cell.h  Coords3D.cpp  Coords3D.h  EtchingMenu.cpp  EtchingMenu.h  FloatHelper.cpp  FloatHelper.h  GeometryPrimitives.cpp  GeometryPrimitives.h  MainWindow.cpp  MainWindow.h  MaskMenu.cpp  MaskMenu.h  MaskPreview.cpp  MaskPreview.h  Render.cpp  Render.h  SelectAtomMenu.cpp  SelectAtomMenu.h  Settings.cpp  Settings.h  SimulationType.h  Surface3D.cpp  Surface3D.h  constants.h  consts.h  etchingMenu.cpp  etchingMenu.h  face.cpp  face.h  functions.cpp  functions.h  geometry.cpp  geometry.h  main.cpp  maskMenu.cpp  (+10 more)
